# SoundNest_gRPC

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  nodemon.json  pyproject.toml  pytest.ini  sonar-project.properties
protos/event/: temporal.proto
protos/streaming/: song.proto
src/: server.py
src/config/: connection_mongo.py  connection_mysql.py  connection_rabbitmq.py  fcm_config.py
src/controller/: event_controller.py  song_controller.py  user_controller.py
src/controller/utils/: client_registry.py
src/interceptors/: jwt_interceptor.py  logger_interceptor.py
src/messaging/: android_messaging.py  constants.py  delete_song_consumer.py  fcm_messaging.py  notification_producer.py
src/messaging/alertEvent/: comment_reply_consumer.py  song_visits_consumer.py
src/models/mongo/: models_mongo.py
src/models/mysql/: models.py
src/repository/: __init__.py  fcmtoken_mongo_repository.py  photo_repository.py  song_description_mongo_repository.py  song_extension_repository.py  song_repository.py
src/services/: antohesongservice.py  event_service.py  song_service.py  temporal.py  user_images_service.py
src/services/errors/: exceptions.py
src/services/models/: event.py
src/utils/: check_connection.py  rest_api.py  rest_server.py
src/utils/disk_access/: base_resource_manager.py  song_file.py  user_image.py  utilities.py
src/utils/events/: event_custom.py
src/utils/injection/: base_conteiner.py  containers.py
src/utils/wrappers/: event_wrapper.py  song_wrapper.py
tests/: conftest.py  test_photo_repository.py
tests/repository_test/: test_photo_repository.py  test_song_repository.py
tests/utils_test/: test_rest_api.py
